--- a/src/View/MenuPrincipal.form
+++ b/src/View/MenuPrincipal.form
@@ -30,6 +30,8 @@
         </Menu>
       </SubComponents>
     </Menu>
+    <Component class="javax.swing.JColorChooser" name="jColorChooser1">
+    </Component>
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
@@ -731,7 +733,11 @@
             <Component class="javax.swing.JTextField" name="programaDuracionInput">
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="programaDuracionInputActionPerformed"/>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="programaDuracionInputKeyTyped"/>
               </Events>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value=""/>
+              </AuxValues>
             </Component>
             <Component class="javax.swing.JTextField" name="programasGeneroInput">
             </Component>
