--- a/src/View/InformacionPrograma.form
+++ b/src/View/InformacionPrograma.form
@@ -27,10 +27,8 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="tituloLabel" pref="209" max="32767" attributes="0"/>
-                      <Component id="tituloSeparator" max="32767" attributes="0"/>
-                  </Group>
+                  <Component id="tituloLabel" max="32767" attributes="0"/>
+                  <Component id="tituloSeparator" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Component id="nombreLabel" min="-2" pref="67" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
@@ -108,6 +106,11 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="nombreInput">
+      <Properties>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="this.programaSeleccionado.getNombre()" type="code"/>
+        </Property>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="horarioLabel">
       <Properties>
@@ -115,6 +118,11 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="horarioInput">
+      <Properties>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="this.programaSeleccionado.getHorario()" type="code"/>
+        </Property>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="duracionLabel">
       <Properties>
@@ -122,6 +130,14 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="duracionInput">
+      <Properties>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="Integer.toString(this.programaSeleccionado.getDuracion())&#xd;&#xa;" type="code"/>
+        </Property>
+      </Properties>
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="duracionInputKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="generoLabel">
       <Properties>
@@ -129,12 +145,20 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="generoInput">
+      <Properties>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="this.programaSeleccionado.getGenero()" type="code"/>
+        </Property>
+      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="actualizarProgramaBtn">
       <Properties>
         <Property name="text" type="java.lang.String" value="Actualizar Programa"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="actualizarProgramaBtnActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
