--- a/src/View/InformacionLocutor.form
+++ b/src/View/InformacionLocutor.form
@@ -27,63 +27,54 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jSeparator1" max="32767" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="idLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="nombreLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="18" pref="18" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="nombreLocutorInput" max="32767" attributes="0"/>
-                          <Component id="idLocutorInput" max="32767" attributes="0"/>
-                      </Group>
+                  <Group type="102" attributes="0">
+                      <Component id="botonActualizarInfo" min="-2" pref="178" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="botonEliminarLocutor" min="-2" pref="184" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="correoLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="telefonoLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="correoLocutorInput" max="32767" attributes="0"/>
-                          <Component id="telefonoLocutorInput" max="32767" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="direccionLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="sexoLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="11" pref="11" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="direccionLocutorInput" max="32767" attributes="0"/>
-                          <Component id="sexoLocutorInput" max="32767" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="fechaLocutorLabel" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-                          <Component id="fechaLocutorInput" max="32767" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="informacionLocutorLabel" min="-2" max="-2" attributes="0"/>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="botonActualizarInfo" min="-2" pref="178" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="botonEliminarLocutor" min="-2" pref="184" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Component id="fechaLocutorLabel" min="-2" pref="64" max="-2" attributes="0"/>
+                              <EmptySpace pref="73" max="32767" attributes="0"/>
+                              <Component id="fechaLocutorInput" min="-2" pref="526" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="direccionLocutorLabel" max="32767" attributes="0"/>
+                                      <Component id="idLocutorLabel" alignment="1" max="32767" attributes="0"/>
+                                      <Component id="correoLocutorLabel" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="nombreLocutorLabel" alignment="1" max="32767" attributes="0"/>
+                                      <Component id="telefonoLocutorLabel" alignment="0" max="32767" attributes="0"/>
+                                  </Group>
+                                  <Component id="sexoLocutorLabel" max="32767" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="16" pref="16" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="telefonoLocutorInput" alignment="0" pref="526" max="32767" attributes="0"/>
+                                  <Component id="direccionLocutorInput" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="correoLocutorInput" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="idLocutorInput" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="nombreLocutorInput" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="sexoLocutorInput" max="32767" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
+                      <EmptySpace pref="9" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jSeparator1" min="-2" pref="590" max="-2" attributes="0"/>
+                          <Component id="informacionLocutorLabel" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -92,49 +83,57 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="informacionLocutorLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="nombreLocutorInput" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   <Component id="nombreLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="nombreLocutorInput" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="idLocutorLabel" min="-2" max="-2" attributes="0"/>
-                  <Component id="idLocutorInput" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="idLocutorInput" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                  <Component id="idLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="correoLocutorLabel" min="-2" max="-2" attributes="0"/>
-                  <Component id="correoLocutorInput" min="-2" max="-2" attributes="0"/>
+                  <Component id="correoLocutorInput" min="-2" pref="30" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="telefonoLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="telefonoLocutorInput" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Component id="telefonoLocutorLabel" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="direccionLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="direccionLocutorInput" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Component id="telefonoLocutorInput" min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="direccionLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="direccionLocutorInput" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="13" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="sexoLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="sexoLocutorInput" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="sexoLocutorInput" alignment="3" pref="29" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="fechaLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="fechaLocutorInput" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace pref="21" max="32767" attributes="0"/>
+                      <Component id="fechaLocutorLabel" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="18" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace pref="16" max="32767" attributes="0"/>
+                      <Component id="fechaLocutorInput" min="-2" pref="27" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="botonActualizarInfo" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="botonEliminarLocutor" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="botonEliminarLocutor" min="-2" max="-2" attributes="0"/>
+                  <Component id="botonActualizarInfo" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
